# Web-Info-system

./: .gitignore  README.md  app.py  pyproject.toml
helpers/: __init__.py  captcha.py  config.py  cookies.py  database.py  search.py
instance/: shiba.db  test.db
static/: css_of_new.css  login.css  login_apple.css  package-lock.json  register.css  students.css  students.js  students_card.css
static/参考/: Apple ID.html
templates/: login.html  new.html  register.html  students.html
