[tool.poetry]
name = "web-info-system"
version = "0.1.0"
description = ""
authors = ["Web team <dk@pornhub.com>"]
readme = "README.md"
packages = [{include = "web_info_system"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.1.0"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
